sample/calc_no_inline.output
State 13 conflicts: 2 shift/reduce


Grammar

    0 $accept: program "end of file"

    1 program: ε
    2        | program expr LF
    3        | program LF

    4 expr: NUM
    5     | expr op expr
    6     | '(' expr ')'

    7 op: PLUS
    8   | TIMES


State 0

    0 $accept: • program "end of file"

    $default  reduce using rule 1 (program)

    program  go to state 1


State 1

    0 $accept: program • "end of file"
    2 program: program • expr LF
    3        | program • LF

    "end of file"  shift, and go to state 2
    NUM            shift, and go to state 3
    LF             shift, and go to state 4
    '('            shift, and go to state 5

    expr  go to state 6


State 2

    0 $accept: program "end of file" •

    $default  accept


State 3

    4 expr: NUM •

    $default  reduce using rule 4 (expr)


State 4

    3 program: program LF •

    $default  reduce using rule 3 (program)


State 5

    6 expr: '(' • expr ')'

    NUM  shift, and go to state 3
    '('  shift, and go to state 5

    expr  go to state 7


State 6

    2 program: program expr • LF
    5 expr: expr • op expr

    PLUS   shift, and go to state 8
    TIMES  shift, and go to state 9
    LF     shift, and go to state 10

    op  go to state 11


State 7

    5 expr: expr • op expr
    6     | '(' expr • ')'

    PLUS   shift, and go to state 8
    TIMES  shift, and go to state 9
    ')'    shift, and go to state 12

    op  go to state 11


State 8

    7 op: PLUS •

    $default  reduce using rule 7 (op)


State 9

    8 op: TIMES •

    $default  reduce using rule 8 (op)


State 10

    2 program: program expr LF •

    $default  reduce using rule 2 (program)


State 11

    5 expr: expr op • expr

    NUM  shift, and go to state 3
    '('  shift, and go to state 5

    expr  go to state 13


State 12

    6 expr: '(' expr ')' •

    $default  reduce using rule 6 (expr)


State 13

    5 expr: expr • op expr
    5     | expr op expr •

    Conflict on PLUS. shift/reduce(expr)
      PLUS comes from state 1 goto by expr
      PLUS comes from state 5 goto by expr
      PLUS comes from state 11 goto by expr

    Conflict on TIMES. shift/reduce(expr)
      TIMES comes from state 1 goto by expr
      TIMES comes from state 5 goto by expr
      TIMES comes from state 11 goto by expr


    PLUS   shift, and go to state 8
    TIMES  shift, and go to state 9

    PLUS   reduce using rule 5 (expr)
    TIMES  reduce using rule 5 (expr)
    LF     reduce using rule 5 (expr)
    ')'    reduce using rule 5 (expr)

    op  go to state 11


